* Add more milestones * Add html files * Recreate all iframes on every render

--- a/src/assets/runner/index.html
+++ b/src/assets/runner/index.html
@@ -8,6 +8,15 @@
   </script>
   <meta charset="UTF-8">
   <title>ng2-bundle</title>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+    h1, h2, body, html {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 
 </head>
 
@@ -43,7 +52,6 @@
       },
     }
   });
-
 
 
 </script>
