--- a/src/assets/runner/tests.html
+++ b/src/assets/runner/tests.html
@@ -18,8 +18,9 @@
 
 <!-- Polyfill(s) for older browsers -->
 <script src="node_modules/core-js/client/shim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/mocha/2.3.3/mocha.js"></script>
+<script src="js/chai.min.js"></script>
+<script src="js/sinon.js"></script>
+<script src="js/mocha.js"></script>
 <script src="node_modules/zone.js/dist/zone.js"></script>
 <script src="node_modules/reflect-metadata/Reflect.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
