--- a/src/exercises/dependency-injection/videos.html
+++ b/src/exercises/dependency-injection/videos.html
@@ -1,8 +1,8 @@
 <div>
   <h1>{{title}}</h1>
-  <div>
-    <input #i type="text" (click)="search(i.value)">
-  </div>
+  <input #searchString type="text">
+  <button (click)="search(searchString.value)">Search!</button>
+
   <div *ngIf="!videos?.length">
     No videos.
   </div>
