Add ng-content milestone

--- a/src/assets/runner/tests.html
+++ b/src/assets/runner/tests.html
@@ -13,6 +13,9 @@
 
 <body>
 <my-app></my-app>
+<!-- TODO(kirjs): I'm actually adding all possible components we could use here,
+but this should be done dynamically instead. -->
+<my-wrapper></my-wrapper>
 </body>
 
 
