test enter-key-down and initial search

--- a/src/exercises/2-templates/all-videos/solution/app.html
+++ b/src/exercises/2-templates/all-videos/solution/app.html
@@ -1,6 +1,6 @@
 <div>
   <h1>{{title}}</h1>
-  <input #searchString type="text">
+  <input #searchString type="text" (keydown)="enterPressed($event.key, searchString.value)">
   <button (click)="search(searchString.value)">Search!</button>
 
   <div *ngIf="!videos?.length">
