--- a/src/exercises/5-content-projection/0-add-toggle-panel-component/togglepanel.html
+++ b/src/exercises/5-content-projection/0-add-toggle-panel-component/togglepanel.html
@@ -1,8 +1,1 @@
-<div *ngIf="showDescription">
-  <ng-content select=".description"></ng-content>
-  <button (click)="showDescription=false">Show meta</button>
-</div>
-<div *ngIf="!showDescription">
-  <ng-content select=".extra"></ng-content>
-  <button (click)="showDescription=true">Show description</button>
-</div>
+<!-- add your code here -->
