* hide next exercise button * Clean up the feedback widget * Add dates to the videos.

--- a/src/exercises/4-component-tree/0-add-video-component/solution/video.html
+++ b/src/exercises/4-component-tree/0-add-video-component/solution/video.html
@@ -3,3 +3,4 @@
 <div>Views {{video.views}}</div>
 <div>Likes {{video.likes}}</div>
 <div>Description {{video.description}}</div>
+<div>Date {{video.date}}</div>
