--- a/src/exercises/6-children/solution/video.html
+++ b/src/exercises/6-children/solution/video.html
@@ -7,6 +7,7 @@
     <div class="likes">Likes: {{video?.likes}}</div>
   </div>
 </my-toggle-panel>
+<div>Date {{video.date}}</div>
 <my-ad></my-ad>
 
 
