--- a/src/exercises/7-pipes/1-use-pipe/solution/video.html
+++ b/src/exercises/7-pipes/1-use-pipe/solution/video.html
@@ -7,7 +7,5 @@
     <div class="likes">Likes: {{video?.likes}}</div>
   </div>
 </my-toggle-panel>
-<div>Date {{video.date}}</div>
+<div>Date {{video.date | fuzzy}}</div>
 <my-ad></my-ad>
-
-
