Had to manually adjust spacing for now so it doesn't look ugly. Will figure it out later.

--- a/src/exercises/diffs/thumbs.html
+++ b/src/exercises/diffs/thumbs.html
@@ -1,6 +1,6 @@
-/*d:initial:thumbsComponentCreate*/
+/*d:initial:thumbsComponentCreate/trimBoth*/
 <!-- Write your code here -->
-/*/d*//*d:thumbsComponentCreateSolved*/
+/*/d*//*d:thumbsComponentCreateSolved/trimBoth*/
 <button (click)="thumbsUp()" class="thumbs-up">
   Thumbs up
 </button>
