--- a/src/exercises/diffs/video.html
+++ b/src/exercises/diffs/video.html
@@ -1,13 +1,13 @@
 /*d:initial:initial*/<!-- Write your code here -->
-/*/d*//*d:videoComponentCreateSolved*/
+/*/d*//*d:videoComponentCreateSolved/trimLeading*/
 <h2>{{video.title}}</h2>
 <img [src]="video.src" >
 <div>Date {{video.date}}</div>
-/*/d*//*d:initial:togglePanelComponentUse*/
+/*/d*//*d:videoComponentCreateSolved:togglePanelComponentUse/trimLeading*/
 <div>Views {{video.views}}</div>
 <div>Likes {{video.likes}}</div>
 <div>Description {{video.description}}</div>
-/*/d*//*d:thumbsComponentUseSolved*/
+/*/d*//*d:thumbsComponentUseSolved/trimBoth*/
 <my-thumbs (onThumbs)="onThumbs($event)"></my-thumbs>
 /*/d*//*d:togglePanelComponentUseSolved*/
 <my-toggle-panel>
