--- a/src/exercises/diffs/app.html
+++ b/src/exercises/diffs/app.html
@@ -1,6 +1,7 @@
-<div>
-  /*d:templatePageSetupSolved*/ <h1>{{title}}</h1>
-  /*/d*//*d:templatePageSetupSolved:templatePageSetupSolved*/<input type="text" placeholder="video">
+<div>/*d:templatePageSetupSolved*/
+  <h1>{{title}}</h1>
+  /*/d*//*d:templatePageSetupSolved:templatePageSetupSolved/trimLeading*/
+  <input type="text" placeholder="video">
   <button>Search</button>
   /*/d*//*d:templateAddActionSolved*/<input type="text" placeholder="video" #searchString>
   <button (click)="search(searchString.value)">Search!</button>
@@ -15,5 +16,5 @@
   </div>
   /*/d*//*d:videoComponentUseSolved*/
   <my-video *ngFor="let video of videos" [video]="video"></my-video>
-  /*/d*/
+/*/d*/
 </div>
