--- a/src/assets/runner/tests.html
+++ b/src/assets/runner/tests.html
@@ -35,14 +35,14 @@ but this should be done dynamically instead. -->
 
   System.config({
     map: {
-      '@angular/core': 'node_modules/@angular/core/bundles/core.umd.js',
+      '@angular/core': 'node_modules/@angular/core/bundles/core.umd.min.js',
       '@angular/core/testing': 'node_modules/@angular/core/bundles/core-testing.umd.js',
-      '@angular/common': 'node_modules/@angular/common/bundles/common.umd.js',
-      '@angular/compiler': 'node_modules/@angular/compiler/bundles/compiler.umd.js',
+      '@angular/common': 'node_modules/@angular/common/bundles/common.umd.min.js',
+      '@angular/compiler': 'node_modules/@angular/compiler/bundles/compiler.umd.min.js',
       '@angular/compiler/testing': 'node_modules/@angular/compiler/bundles/compiler-testing.umd.js',
-      '@angular/platform-browser': 'node_modules/@angular/platform-browser/bundles/platform-browser.umd.js',
+      '@angular/platform-browser': 'node_modules/@angular/platform-browser/bundles/platform-browser.umd.min.js',
       '@angular/platform-browser/testing': 'node_modules/@angular/platform-browser/bundles/platform-browser-testing.umd.js',
-      '@angular/platform-browser-dynamic': 'node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js',
+      '@angular/platform-browser-dynamic': 'node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.min.js',
       '@angular/platform-browser-dynamic/testing': 'node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic-testing.umd.js',
       '@angular/http': 'node_modules/@angular/http/bundles/http.umd.js',
       '@angular/router': 'node_modules/@angular/router/bundles/router.umd.js',
@@ -58,7 +58,7 @@ but this should be done dynamically instead. -->
   });
 </script>
 <script>
-  System.register("initTestBed", ['@angular/core/testing', '@angular/platform-browser-dynamic/testing'], function (exports_1, context_1){
+  System.register("initTestBed", ['@angular/core/testing', '@angular/platform-browser-dynamic/testing'], function (){
     "use strict";
     var testing_1, testing_2;
     return {
