Finish fuzzy pipe exercise and draft up a DataBinding exercise

--- a/src/exercises/diffs/video.html
+++ b/src/exercises/diffs/video.html
@@ -2,7 +2,9 @@
 /*/d*//*d:videoComponentCreateSolved/trimLeading*/
 <h2>{{video.title}}</h2>
 <img [src]="video.src" >
+/*/d*//*d:videoComponentCreateSolved:fuzzyPipeUseSolved/trimLeading*/
 <div>Date {{video.date}}</div>
+/*/d*//*d:fuzzyPipeUseSolved*/<div>Date {{video.date | fuzzy}}</div>
 /*/d*//*d:videoComponentCreateSolved:togglePanelComponentUse/trimLeading*/
 <div>Views {{video.views}}</div>
 <div>Likes {{video.likes}}</div>
